# TSDAP-Materials

.virtual_documents/labs/creating-package/: classes.ipynb.py
labs/.virtual_documents/creating-package/: classes.ipynb.py
labs/argparse/: Readme.rst
labs/argparse/argparse_additional/: argparse_additional.ipynb  myscript.py
labs/argparse/hw/: exc1.py  exc2.py  exc3.py  exc4.py
labs/argparse/sample_code/: simple_cli.py
labs/creating-package/: classes.ipynb
labs/creating-package/package1/: simple_package1.py
labs/creating-package/package2/: simple_package2.py
labs/creating-package/package3/: setup.cfg
labs/creating-package/package3_/: setup.cfg  setup.py
labs/creating-package/package4/: setup.py
labs/creating-package/package5/: pyproject.toml  setup.cfg
labs/creating-package/package7/: setup.cfg
labs/exceptions/: wrapper.ipynb
labs/git-example-repo/: Readme.md  file1.txt  file2.txt
labs/git-laboratory/: README.md
labs/jupyter/: class.ipynb  jupyter-profiling.ipynb  presentation.ipynb  sample_module.py
labs/modules/: Readme.rst
labs/numpy/: classes.ipynb
labs/pandas/: Classes.ipynb  additional.ipynb
labs/pandas/data/: iris.xlsx  (+1 more)
labs/python-packaging-exercise/: pack_ecx.ipynb
labs/python-packaging-exercise/homework_exercise/: setup.cfg  setup.py
labs/python-packaging-exercise/homework_exercise/src/hw_package_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
labs/regex/: regex.ipynb
project/: Untitled.ipynb  setup.cfg  trainer.py
project/.ipynb_checkpoints/: trainer-checkpoint.py
project/trainer/: example.ipynb
(+27 files in other folders)
