[metadata]
name = simple-package-3
description = Sample package for classes.
author = Grzegorz Bokota
author_email = g.bokota@mimuw.edu.pl
license = BSD-3-Clause
version = 0.0.1
long_description = file: Readme.rst
[options]
packages = find:
package_dir =
    =src
[options.packages.find]
where = src
include = simple_package3