[metadata]
name = hw-package-1
version = 0.0.1
author = Bartek Krzepkowski
author_email = b.krzepkowski@student.uw.edu.pl
description = Homework package
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.22.0
    toml >= 0.10.0

[options.packages.find]
where = src

